...
    <string name="app_name">Train Inventory</string>

    <string name="trains">Trains</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="all_brands">All Brands</string>
    <string name="add_train">Add Item</string>
    <string name="all_categories">All Categories</string>

    <!-- Details and Add Train screen -->
    <string name="category">Category:</string>
    <string name="brand">Brand:</string>
    <string name="reference">Reference:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_image">Add image</string>
    <string name="change_image">Change image</string>
    <string name="description">Description:</string>
    <string name="location">Location:</string>
    <string name="all_trains">All Items</string>
    <string name="brand_name">Brand name:</string>
    <string name="add_logo">Add logo</string>
    <string name="change_logo">Change logo</string>
    <string name="scale">Scale:</string>
    <string name="category_name">Add category</string>
    <string name="select_category">--Select category--</string>
    <string name="select_brand">--Select brand--</string>

    <!-- Actions -->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="edit_train">Edit Item</string>

    <!-- Empty screen messages -->
    <string name="no_items_found">No items found. Click on the plus button above to add a new item</string>
    <string name="no_brands_found">No brands found. Click on the plus button above to add a new brand.</string>
    <string name="no_categories_found">No categories found. Click on the plus button above to add a new category.</string>
    <string name="no_train_for_this_brand">No trains found for this brand</string>
...
    <string name="cannot_erase_brand">This brand is used by some items. You cannot erase this brand</string>
    <string name="brand_name_empty">Brand name cannot be empty</string>
    <string name="category_name_empty">Category name cannot be empty</string>
    <string name="train_name_empty">Item name cannot be empty</string>
    <string name="category_cannot_be_empty">Category name cannot be empty</string>
    <string name="brand_cannot_be_empty">Brand name cannot be empty</string>
    <string name="do_you_want_to_delete">Do you want to delete this item?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_warning">There are unsaved changes. Are you sure that you want to discard your changes?</string>
    <string name="discard_changes">Discard changes</string>
    <string name="keep_editing">Keep editing</string>
    <string name="permission_denied">Permission denied</string>
    <string name="no_website_warning">You haven\'t provided a web site for this brand. Click edit icon to add one.</string>

    <!-- Content descriptions -->
...
    <string name="website_of_the_brand">Website of the brand</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_brand">Filter by brand</string>
    <string name="hint_search_keywords">Search by keyword(s)</string>
    <string name="search_trains">Search items</string>
    <string name="no_results_for_search">No items found with these criteria.</string>
    <string name="trash">Trash</string>
    <string name="no_trains_in_trash">No items in the trash</string>
    <string name="cd_restore_train">Restore the item</string>
    <string name="category_used_by_trains_in_trash">This category is used by some items in your TRASH folder. Deleting this category will cause those items to be permanently deleted. Do you want to delete it anyway?</string>
    <string name="do_you_want_to_permanently_delete_train">Do you want to permanently delete this train?</string>
    <string name="please_add_items">You don\'t have any items in your inventory yet.</string>
    <string name="task_cancelled">Task cancelled</string>
...
