...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                app:layout_constraintEnd_toStartOf="@+id/addTrain_addCategoryBtn"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/childFragContainer" />

            <Spinner
                android:id="@+id/brandSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                app:layout_constraintEnd_toStartOf="@+id/addTrain_addBrandBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />
...
                style="@style/Widget.TrainInventory.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brandSpinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editReference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.trainBeingModified.modelReference}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                style="@style/Widget.TrainInventory.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editReference_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTrainName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.trainBeingModified.trainName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
...
                style="@style/Widget.TrainInventory.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTrainName_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editScale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.trainBeingModified.scale}" />
            </com.google.android.material.textfield.TextInputLayout>

...
                style="@style/Widget.TrainInventory.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editColor_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:text="@={viewModel.trainBeingModified.location}" />
            </com.google.android.material.textfield.TextInputLayout>
...
                style="@style/Widget.TrainInventory.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editLocation_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTrainDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@={viewModel.trainBeingModified.description}" />
            </com.google.android.material.textfield.TextInputLayout>

...
