...
            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:text="@string/brand"
                app:layout_constraintBaseline_toBaselineOf="@+id/details_brand"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/yellow_descriptive_text" />

            <TextView
                android:id="@+id/details_brand"
                style="@style/details_plain_text"
...
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                style="@style/yellow_descriptive_text"
                android:text="@string/reference"
                app:layout_constraintBaseline_toBaselineOf="@+id/details_reference"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/details_reference"
                style="@style/details_plain_text"
                android:text="@{chosenTrain.modelReference}"
...
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                style="@style/yellow_descriptive_text"
                android:text="@string/category"
                app:layout_constraintBaseline_toBaselineOf="@+id/details_category"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/details_category"
                style="@style/details_plain_text"
                android:text="@{chosenTrain.categoryName}"
...
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                style="@style/yellow_descriptive_text"
                android:text="@string/description"
                app:layout_constraintBottom_toBottomOf="@+id/details_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/details_description" />

            <TextView
                android:id="@+id/details_description"
                style="@style/details_plain_text"
...
                android:id="@+id/textView13"
                style="@style/yellow_descriptive_text"
                android:text="@string/scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                app:layout_constraintBaseline_toBaselineOf="@+id/details_scale"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/details_scale"
                style="@style/details_plain_text"
                android:text="@{chosenTrain.scale}"
...
                android:id="@+id/textView18"
                style="@style/yellow_descriptive_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:text="@string/location"
                app:layout_constraintBaseline_toBaselineOf="@+id/details_location"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/details_location"
                style="@style/details_plain_text"
                android:layout_marginBottom="8dp"
...
